tests/js_error/source_locations/expression/binary/instanceof.exp
TypeError: invalid instanceof operand
  ┌ source_locations/expression/binary/instanceof.js:1:6
  |
1 | ({}) instanceof null
  |      ^
Stack trace:
  at <global> (source_locations/expression/binary/instanceof.js:1:6)